# nif-textures-reader

./: CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
src/: index.js  main.cpp
